// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should test ExpensesSummary with  multiple expenses 1`] = `
<div>
  <h1>
     Viewing 
    3
     
    expenses
     totalling 
    $1,232,456.55
     
  </h1>
</div>
`;

exports[`should test ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $0.12
     
  </h1>
</div>
`;
